# wit-sample

./: Cargo.toml  README.md  wasi_snapshot_preview1.wasm  wit_sample_com.wasm
src/: lib.rs
wit/: host.wit
